--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,6 +16,11 @@ body {
     background-repeat:repeat;
 }
 
+img {
+    max-width:100%;
+    max-height:auto;
+}
+
 ul {
     list-style-type:none;
 }
